--- a/incremental-app/src/app/components/afip-main/afip-main.component.html
+++ b/incremental-app/src/app/components/afip-main/afip-main.component.html
@@ -16,7 +16,7 @@
         </span>
       </p>
       <p>
-          <span>Recaudación: <span style="color: green;">${{recaudacion}}/seg</span> </span>          
+          <span>Recaudación: <span style="color: green;">${{recaudacion}}/seg </span> <span>({{impuesto.level}}% de sueldos)</span></span>          
       </p>
     </mat-card-content>
 </mat-card>
