--- a/incremental-app/src/app/components/speech-bubble/speech-bubble.component.html
+++ b/incremental-app/src/app/components/speech-bubble/speech-bubble.component.html
@@ -2,6 +2,6 @@
 -->
 
 <div *ngIf="sunBubble" id="div-speech">
-    <img id="speech-bubble" src="../../../assets/bubble-speech.png" alt="te voy a matar gil">
+    <img id="speech-bubble" src="../../../assets/bubble-speech.png" alt="">
     <p id="speech-text">{{sunText}}</p>
 </div>
