--- a/incremental-app/src/app/components/fmi-main/fmi-main.component.html
+++ b/incremental-app/src/app/components/fmi-main/fmi-main.component.html
@@ -19,9 +19,12 @@
 
 
 <div *ngIf="lockFmi" class="main-card center-content">
-  <p>
+  <p #tooltip="matTooltip"
+  matTooltip="Precio: ${{componentPrice}}"
+  matTooltipPosition="below"
+  matTooltipHideDelay="0">
     
-    <button type="button" (click)="buttonUnlockComponent()" mat-raised-button>
+    <button [disabled]="!allowButtonUnlock()" type="button" (click)="buttonUnlockComponent()" mat-raised-button>
       <mat-icon aria-hidden="false" aria-label="lock_open" fontIcon="lock_open"></mat-icon>
       Desbloquear FMI
     </button>
