--- a/incremental-app/src/app/components/conicet-main/conicet-main.component.html
+++ b/incremental-app/src/app/components/conicet-main/conicet-main.component.html
@@ -13,14 +13,14 @@
       <p class="upgrade-content">
         <span>Ñoquis: {{scientist}}</span>
         <span fxFlex fxLayoutAlign="end center">
-            <!--<button [disabled]="!allowAddWorker()" type="button" color="primary" (click)="buttonAddWorker()" mat-raised-button >Contratar Ñoqui</button>-->
+            <button type="button" color="primary" (click)="buttonAddScientist()" mat-raised-button >Contratar Ñoqui</button>
         </span>
       </p>
 
       <p class="upgrade-content">
         <span>Sueldos: <span style="color: red;">${{scientistCostRounded}}/seg</span></span>
         <span fxFlex fxLayoutAlign="end center">
-            <!--<button [disabled]="!allowRemoveWorker()" type="button" color="warn" (click)="buttonRemoveWorker()" mat-raised-button >Despedir Ñoqui</button>-->
+            <button [disabled]="!allowRemoveScientist()" type="button" color="warn" (click)="buttonRemoveScientist()" mat-raised-button >Despedir Ñoqui</button>
         </span>
       </p>
 
