--- a/incremental-app/src/app/components/fmi-main/fmi-main.component.html
+++ b/incremental-app/src/app/components/fmi-main/fmi-main.component.html
@@ -7,7 +7,7 @@
     
     <mat-card-content>
             <p>Deuda: <span style="color: red;">${{deuda}}</span> </p>
-            <p>Intereses: {{intereses * 100}}% / min</p>
+            <p>Intereses: {{intereses}}% / seg</p>
     </mat-card-content>
 
 
